<resources>
    <string name="app_name">GarkomApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_Ana_Sayfa">Ana sayfa</string>
    <string name="menu_garkom_sektor">GARKOM SEKTÖR :</string>
    <string name="menu_garkom_nasilCalisir">GARKOM NASIL ÇALIŞIR</string>
    <string name="menu_isAriyorum">İş Arıyorum</string>
    <string name="menu_CalisanAriyorum">Çalışan Arıyorum</string>
    <string name="menu_hakkimizda">Hakkımızda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>